--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -99,7 +99,7 @@
 					$("#invalid").html(res.output.message);
 					
 				} else {
-					window.location = "/admin-dashboard";
+					window.location = "/dashboard";
 				}
 
 			}
