--- a/app/class_teacher/templates/partials/_class_navbar.html
+++ b/app/class_teacher/templates/partials/_class_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-    <a class="navbar-brand brand-logo mr-5" href="{{url_for('admin_blueprint.dashboard')}}"><img src="../static/images/logo.png" class="mr-2" alt="logo"/>Admin</a>
+    <a class="navbar-brand brand-logo mr-5" href="{{url_for('admin_blueprint.dashboard')}}"><img src="../static/images/logo.png" class="mr-2" alt="logo"/>Class Teacher</a>
     <a class="navbar-brand brand-logo-mini" href="{{url_for('admin_blueprint.dashboard')}}"><img src="../static/images/logo.png" alt="logo"/></a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
