--- a/app/class_teacher/templates/partials/_class_sidebar.html
+++ b/app/class_teacher/templates/partials/_class_sidebar.html
@@ -14,8 +14,8 @@
       </a>
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu" style="background: white;">
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_add_user')}}" style="color: #5c5656;">Add New User</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_user_list')}}" style="color: #5c5656;">User List</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{{url_for('class_teacher_blueprint.add_teacher')}}" style="color: #5c5656;">Add Subject Teacher</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{{url_for('class_teacher_blueprint.list_teacher')}}" style="color: #5c5656;">Teacher List</a></li>
           <!-- <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_typography')}}">Typography</a></li> -->
         </ul>
       </div>
@@ -23,12 +23,12 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
-        <span class="menu-title">Applications</span>
+        <span class="menu-title">Students</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu" style="background: white;">
-          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_std_app_list')}}" style="color: #5c5656;">Application List</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_std_app_list')}}" style="color: #5c5656;"> Add Student</a></li>
         </ul>
       </div>
     </li>
