--- a/app/home/static/css/main.css
+++ b/app/home/static/css/main.css
@@ -356,3 +356,36 @@ img.pull-left {
   }
   
 
+/* student fees */
+
+.table-fixed tbody {
+    height: 450px;
+    overflow-y: auto;
+    width: 100%;
+	font-size: 15px;
+	
+}
+
+.table-fixed thead,
+.table-fixed tbody,
+.table-fixed tr,
+.table-fixed td,
+.table-fixed th {
+    display: block;
+}
+
+.table-fixed tbody td,
+.table-fixed tbody th,
+.table-fixed thead > tr > th {
+    float: left;
+    position: relative;
+    &::after {
+        content:'';
+        clear:both;
+        display:block;
+    }
+}
+
+
+
+ 
