--- a/app/home/templates/partials/_navbarhome.html
+++ b/app/home/templates/partials/_navbarhome.html
@@ -10,13 +10,8 @@
 				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="sidebar-left.html">Student</a></li>
-							<li class="active"><a href="sidebar-right.html">Student</a></li>
-						</ul>
-					</li>
+					<li><a href="{{url_for('home_blueprint.studentFee')}}">Student Fees</a></li>
+					<li><a href="{{url_for('home_blueprint.trackapplication')}}">Track Student</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 					<li><a class="btn" href="{{url_for('home_blueprint.login')}}">Login</a></li>
 				</ul>
