--- a/app/admin/templates/pages/user-management/add-new-user.html
+++ b/app/admin/templates/pages/user-management/add-new-user.html
@@ -102,6 +102,33 @@
                                                             </select>
                                                         </div>
                                                     </div>
+
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label class="form-control-label" for="section">Select Stream</label>
+                                                            <select name="stream" id="stream" class="form-control">
+                                                                <option value="">---Select Stream---</option>
+                                                                <option value="Arts">Arts</option>
+                                                                <option value="Commerce">Commerce</option>
+                                                                <option value="Science">Science</option>
+                                                                
+                                                            </select>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="col-lg-6">
+                                                        <div class="form-group">
+                                                            <label class="form-control-label" for="section">Select Subject</label>
+                                                            <select name="subject" id="subject" class="form-control">
+                                                                <option value="">---Select Subject---</option>
+                                                                <option value="English">English</option>
+                                                                <option value="Dzongkha">Dzongkha</option>
+                                                                <option value="Mathematics">Mathematics</option>
+                                                                <option value="Economics">Economics</option>
+                                                                
+                                                            </select>
+                                                        </div>
+                                                    </div>
                                                 </div>
                                             </div>
 
