--- a/app/class_teacher/templates/partials/_class_sidebar.html
+++ b/app/class_teacher/templates/partials/_class_sidebar.html
@@ -28,7 +28,8 @@
       </a>
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu" style="background: white;">
-          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_std_app_list')}}" style="color: #5c5656;"> Add Student</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Add Student</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Student List</a></li>
         </ul>
       </div>
     </li>
