--- a/app/class_teacher/templates/pages/add-student/add_student_class.html
+++ b/app/class_teacher/templates/pages/add-student/add_student_class.html
@@ -1,6 +1,6 @@
-{% extends 'layouts/admin_main.html' %}
+{% extends 'layouts/class_teacher_main.html' %}
 
-{% block title %} Dashboard For Bank Users {% endblock title %}
+{% block title %} Dashboard {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,8 +25,9 @@
       <div class="col-12 grid-margin stretch-card">
         <div class="card">
           <div class="card-body">
-            <h4 class="card-title">Student Application List</h4>
+            <h4 class="card-title">Add Student In Class</h4>
             <hr>
+            
             <div class="card-body">
               <div class="row">
                   <div class="table-responsive">
