--- a/app/home/templates/track_std.html
+++ b/app/home/templates/track_std.html
@@ -18,7 +18,7 @@
             <div class="card" >
                 <div class="card-header" style="font-size:16px">Track your student performances :</div> 
                     <div class="card-body">
-                        <form action="" id="track_std" method="POST">
+                        <form id="track_std" method="POST">
                             <div class="form-group row">
                                 <label for="email_address" class="col-md-4 col-form-label text-md-right" style=" font-size:14px">CID</label>
                                 <div class="col-md-6"> <br>
@@ -60,55 +60,19 @@
                             <table class="table align-items-center table-flush" id="customerList">
                                 <thead class="thead-light">
                                 <tr>
-                                    <th scope="col" class="sort" data-sort="name">SL</th>
+                                    <th scope="col" class="sort" data-sort="name">First name</th>
+                                    <th scope="col" class="sort" data-sort="name">Last name</th>
                                     <th scope="col" class="sort" data-sort="name">Index Number</th>
                                     <th scope="col" class="sort" data-sort="budget">CID</th>
-                                    <th scope="col" class="sort" data-sort="name">Student Name</th>
+                                    <th scope="col" class="sort" data-sort="name">Stream</th>
+                                    <th scope="col" class="sort" data-sort="name">Section</th>
                                     <th scope="col" class="sort" data-sort="name">Email</th>
                                     <th scope="col">action</th>
                                 </tr>
                                 </thead>
-                                <tbody class="list">
+                                <tbody class="list" id="list">
                                  
-                                  {% for usr in track_st %}
-                                  <tr>
-                                      <th scope="row">
-                                          {{ loop.index }}
-                                      </th>
-                                      <th scope="row">
-                                          {{ usr.index_number }}
-                                      </th>
-                                      <td class="budget">
-                                          {{ usr.student_cid}}
-                                      </td>
-                                      <td class="budget">
-                                          {{ usr.first_name }}
-                                      </td>
-                                      <td class="budget">
-                                        {{ usr.first_name }}
-                                      </td>
-                                      <td class="budget">
-                                      {{ usr.student_email }}
-                                      </td>
-      
-                                      <td class="text-right">
-                                          <div class="dropdown">
-                                              <a class="btn btn-sm btn-icon-only text-light" href="#"
-                                                  role="button" data-toggle="dropdown" aria-haspopup="true"
-                                                  aria-expanded="false">
-                                                  <i class="fas fa-ellipsis-v"></i>
-                                              </a>
-                                              <div
-                                                  class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                  <a class="dropdown-item"
-                                                      href="/search/{{ usr.id }}">View</a>
-                                                  <a class="dropdown-item" href="javascript:void(0)"
-                                                      onclick="deleteUser('{{ user.user_id }}')">Delete</a>
-                                              </div>
-                                          </div>
-                                      </td>
-                                  </tr>
-                                  {% endfor %}
+                                  
                                 </tbody>
                             </table>
                         </div>
@@ -131,12 +95,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script>
-//    $(document).ready(function() {
-//         loadUsers()
-//     });
     $("#track_std").on("submit", function (e) {
 		e.preventDefault(e);
-        var form_data = new FormData($('#track_std')[0])
+		var form_data = new FormData($('#track_std')[0])
 		$.ajax({
 			type: 'POST',
 			url: "/search",
@@ -145,65 +106,12 @@
 			cache: false,
 			processData: false,
 			success: function (res) {
-                $('#customerList').DataTable({
-                'processing': true,
-                'serverSide': true,
-                'bDestroy': true,
-                'serverMethod': 'POST',
-           
-                'columns': [
-                    { data: 'sl' },
-                    { data: 'index_number' },
-                    { data: 'student_cid' },
-                    { data: 'first_name' },
-                    { data: 'student_email' },
-              
-                {
-                "render": function(data, type, full, meta) {
-                    return '<div class="dropdown">'+
-                        '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">'+
-                            '<i class="fas fa-ellipsis-v"><b>Click</b></i>'+
-                        '</a>'+
-                        '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">'+
-                            '<a class="dropdown-item" href="/search/' + full.id + '">View</a>'+
-                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser('+full.id+')">Delete</a>'+
-                        '</div>'+
-                    '</div>'
-                }
-                },
-            ],
-            language: {
-            paginate: {
-                next: '&#8594;', // or '→'
-                previous: '&#8592;' // or '←' 
-            }
-            },
-            "ordering": false
-        })
+                const { aaData } = res;
+                console.log(aaData);
+                $("#list").append('<tr><td>'+aaData[0].first_name+'</td></tr>')
 			}
-            
 
 		});
-       
-        
-    })
-
-
-    // $("#track_std").on("submit", function (e) {
-	// 	e.preventDefault(e);
-	// 	var form_data = new FormData($('#track_std')[0])
-	// 	$.ajax({
-	// 		type: 'POST',
-	// 		url: "/search",
-	// 		data: form_data,
-	// 		contentType: false,
-	// 		cache: false,
-	// 		processData: false,
-	// 		success: function (res) {
-			
-	// 		}
-
-	// 	});
-	// });
+	});
 </script>
 {% endblock javascripts %}
