--- a/app/class_teacher/templates/partials/_class_sidebar.html
+++ b/app/class_teacher/templates/partials/_class_sidebar.html
@@ -29,7 +29,7 @@
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu" style="background: white;">
           <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Add Student</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Student List</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.get_student_list')}}" style="color: #5c5656;"> Student List</a></li>
         </ul>
       </div>
     </li>
