--- a/app/subject_teacher/templates/partials/_subject_sidebar.html
+++ b/app/subject_teacher/templates/partials/_subject_sidebar.html
@@ -6,7 +6,7 @@
         <span class="menu-title">Dashboard</span>
       </a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-layout menu-icon"></i>
         <span class="menu-title">User Management</span>
@@ -16,10 +16,10 @@
         <ul class="nav flex-column sub-menu" style="background: white;">
           <li class="nav-item"> <a class="nav-link" href="{{url_for('class_teacher_blueprint.add_teacher')}}" style="color: #5c5656;">Add Subject Teacher</a></li>
           <li class="nav-item"> <a class="nav-link" href="{{url_for('class_teacher_blueprint.list_teacher')}}" style="color: #5c5656;">Teacher List</a></li>
-          <!-- <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_typography')}}">Typography</a></li> -->
+           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_typography')}}">Typography</a></li> 
         </ul>
       </div>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
@@ -28,7 +28,7 @@
       </a>
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu" style="background: white;">
-          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Add Student</a></li>
+          <!-- <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Add Student</a></li> -->
           <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.add_student')}}" style="color: #5c5656;"> Student List</a></li>
         </ul>
       </div>
